--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aeonaxy",
+  "name": "banao",
   "version": "1.0.0",
   "description": "user enrollment and crud operations",
   "main": "server.mjs",
